--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 	<header>
 		<div id="header_wrapper">
 			<h1>
-				<img src="images/_1_03.png" alt=" photo studio">
+				<img src="_1_03.png" alt=" photo studio">
 			</h1>
 			<nav>
 				<ul>
