--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
     <body>
         <header class="wrapper">
-           <img src="./img/logo-dummy.png" alt="ダミーテキスト">
+           <img src="logo-dummy.png" alt="ダミーテキスト">
            <nav>
             <ul class="head-list">
                 <li><a class="a-nav" href="#">HOME</a></li>
