--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
         <title>ダミーテキスト</title>
-        <link rel="stylesheet" href="stylesheet.css" type="text/css">
+        <link rel="stylesheet" href="style.css" type="text/css">
         <link rel="stylesheet" href="responsive.css" type="text/css">
         <script src="https://kit.fontawesome.com/f8c8eab077.js" crossorigin="anonymous"></script>
         <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
@@ -71,7 +71,7 @@
             <div class="heikei">
                 <div class="service-wrapper svwrap">
                     <div class="service-row left">
-                        <img src="./img/service_01.jpeg">
+                        <img src="service_01.jpeg">
                         <div class="bottom-text">
                             <p>service01</p>
                             <h3>ダミーテキスト</h3>
@@ -80,7 +80,7 @@
                         </div>
                     </div>
                     <div class="service-row center">
-                        <img src="./img/service_02.jpeg">
+                        <img src="service_02.jpeg">
                         <div class="bottom-text">
                             <p>service02</p>
                             <h3>ダミーテキスト</h3>
@@ -89,7 +89,7 @@
                         </div>      
                     </div>
                     <div class="service-row right">
-                        <img src="./img/service_03.JPG">
+                        <img src="service_03.JPG">
                         <div class="bottom-text">
                             <p>service03</p>
                             <h3>ダミーテキスト</h3>
@@ -179,7 +179,7 @@
             <div class="btn recruitbtn">ダミーテキストダミーテキスト</div>
         </div>
         <div class="footer">
-            <img class="fot-logo" src="./img/logo-dummy.png">
+            <img class="fot-logo" src="logo-dummy.png">
             <div class="box-adress">
                 <h3>本社・MM工場</h3>
                 <p>〒123-5678</p>
