--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
         <link rel="stylesheet" href="responsive.css" type="text/css">
         <script src="https://kit.fontawesome.com/f8c8eab077.js" crossorigin="anonymous"></script>
-        <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     </head>
 
     <body>
@@ -216,15 +216,15 @@
              </div>
         </footer>
         <!-- ここからJQ -->
-        <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script>
-        <script>
-            // バーガーをクリックしたらメニューにis-activeがなければを付与する、あれば外す。
-            $('.burger').click(function
-            (){
+        <script type="text/javascript" src="script.js"></script>
+        <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> -->
+        <!-- <script>
+             バーガーをクリックしたらメニューにis-activeがなければを付与する、あれば外す。
+            $('.burger').click(function(){
                 $(".burger").toggleClass("is-active");
                 $(".menu").toggleClass("is-active");
             });
-        </script>
+        </script>  -->
     </body>
 
 
