--- a/index.html
+++ b/index.html
@@ -8,8 +8,12 @@
         <title>ダミーテキスト</title>
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
         <link rel="stylesheet" href="responsive.css" type="text/css">
+        <!-- フォントオーサム -->
         <script src="https://kit.fontawesome.com/f8c8eab077.js" crossorigin="anonymous"></script>
-        <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
+        <!-- progateであったJQ読み込み -->
+        <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script> -->
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
+
     </head>
 
     <body>
@@ -215,7 +219,7 @@
                 </div>
              </div>
         </footer>
-        <!-- ここからJQ -->
+        <!-- JQファイル -->
         <script type="text/javascript" src="script.js"></script>
         <!-- <script src="https://code.jquery.com/jquery-3.6.1.min.js" integrity="sha256-o88AwQnZB+VDvE9tvIXrMQaPlFFSUTR+nldQm1LuPXQ=" crossorigin="anonymous"></script> -->
         <!-- <script>
