--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
 
     <body>
         <header class="wrapper">
-           <img src="./img/logo-dummy.png" alt="ダミーテキスト">
+           <img src="logo-dummy.png" alt="ダミーテキスト">
            <nav>
             <ul class="head-list">
                 <li><a class="a-nav" href="#">HOME</a></li>
@@ -63,7 +63,7 @@
             <div class="heikei">
                 <div class="service-wrapper svwrap">
                     <div class="service-row left">
-                        <img src="./img/service_01.jpeg">
+                        <img src="service_01.jpeg">
                         <div class="bottom-text">
                             <p>service01</p>
                             <h3>ダミーテキスト</h3>
@@ -72,7 +72,7 @@
                         </div>
                     </div>
                     <div class="service-row center">
-                        <img src="./img/service_02.jpeg">
+                        <img src="service_02.jpeg">
                         <div class="bottom-text">
                             <p>service02</p>
                             <h3>ダミーテキスト</h3>
@@ -81,7 +81,7 @@
                         </div>      
                     </div>
                     <div class="service-row right">
-                        <img src="./img/service_03.JPG">
+                        <img src="service_03.JPG">
                         <div class="bottom-text">
                             <p>service03</p>
                             <h3>ダミーテキスト</h3>
