--- a/index.html
+++ b/index.html
@@ -171,7 +171,7 @@
             <div class="btn recruitbtn">ダミーテキストダミーテキスト</div>
         </div>
         <div class="footer">
-            <img class="fot-logo" src="./img/logo-dummy.png">
+            <img class="fot-logo" src="logo-dummy.png">
             <div class="box-adress">
                 <h3>本社・MM工場</h3>
                 <p>〒123-5678</p>
