--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
-        <title>ダミーテキスト</title>
+        <title>株式会社　Dummy旅行</title>
         <link rel="stylesheet" href="stylesheet.css" type="text/css">
         <link rel="stylesheet" href="responsive.css" type="text/css">
         <!-- フォントオーサム -->
@@ -27,7 +27,7 @@
                 <li><a class="a-nav" href="#">会社案内</a></li>
                 <li><a class="a-nav" href="#">お知らせ</a></li>
                 <li><a class="recruit" href="#">採用情報</a></li>
-                <li><a class="inquiry" href="#">お問い合わせ(採用専用)</a></li>
+                <li><a class="inquiry" href="#">お問い合わせ</a></li>
             </ul>
             <!-- ここからアコーディオン -->
             <div class="burger"></div>
@@ -48,16 +48,16 @@
 
         <div class="hero-image">
             <div class="hero-text">
-                <h2>ダミーテキストダミーテキストダミーテキスト</h2>
-                <p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</p>
+                <h2>あなたのやりたいを見つけてくる旅行会社ト</h2>
+                <p>目的地さえ教えていただければ、さまざまなプランをご提案いたします。</p>
             </div>
         </div>
 
         <div class="service">
             <div class="service-text svwrap">
-                <h2>ダミーテキスト</h2>
-                <h4>XXXXXXX</h4>
-                <p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</p>
+                <h2>Dummy旅行</h2>
+                <h4>Dummy trip</h4>
+                <p>四季折々の観光エリアをオールシーズン楽しむためのさまざまなご提案</p>
 
             </div>
             <div class="heikei">
@@ -66,7 +66,7 @@
                         <img src="service_01.jpeg">
                         <div class="bottom-text">
                             <p>service01</p>
-                            <h3>ダミーテキスト</h3>
+                            <h3>高原巡りの旅</h3>
                             <h5>ー</h5>
                             <h4>ダミーテキストダミーテキストダミーテキストプ</h4>
                         </div>
@@ -75,7 +75,7 @@
                         <img src="service_02.jpeg">
                         <div class="bottom-text">
                             <p>service02</p>
-                            <h3>ダミーテキスト</h3>
+                            <h3>絶景の海巡り</h3>
                             <h5>ー</h5>
                             <h4>ダミーテキストダミーテキストダミーテキストプ</h4>
                         </div>      
@@ -84,7 +84,7 @@
                         <img src="service_03.JPG">
                         <div class="bottom-text">
                             <p>service03</p>
-                            <h3>ダミーテキスト</h3>
+                            <h3>旬、食の旅</h3>
                             <h5>ー</h5>
                             <h4>ダミーテキストダミーテキストダミーテキストプ</h4>
                         </div>
@@ -92,7 +92,7 @@
                 </div>
             </div> 
             <div class="servicebtn btn">
-                <p><a href="#">ダミーテキストを詳しくみる&emsp;&emsp;&emsp;></a></p>
+                <p><a href="#">旅行プランを詳しくみる&emsp;&emsp;&emsp;></a></p>
             </div>         
         </div>
         
@@ -100,11 +100,11 @@
         <div class="reason">
             <div class="reason-text">
                 <div class="reason-textcenter">
-                <h2 class="big-font">ダミーテキスト</h2>
-                <p>ダミーテキスト</p>
+                <h2 class="big-font">選ばれる理由</h2>
+                <p>Why Choose Us</p>
 
-                <h2>ダミーテキストダミーテキストダミーテキスト</h2>
-                <p>ダミーテキストダミーテキストダミーテキストダミーテキストダミーテキストダミーテキスト</p>
+                <h2>大切な思い出を作るならDummy</h2>
+                <p>現地までしっかり視察し、その土地の魅力を徹底的にリサーチ。ご希望に寄り添うプランニング。</p>
 
                 <div class="reasonbtn btn">ダミーテキストを詳しく見る&emsp;&emsp;&emsp;></div>
                 </div>
@@ -116,19 +116,19 @@
                 <div class="in-le-wp">
                     <div class="infos infoleft">
                         <h3>COMPANY</h3>
-                        <p>ダミーテキスト</p>
+                        <p>会社案内</p>
                     </div>
-                        <p>ダミーテキストダミーテキストダミーテキス</p>
-                        <div class="combtn btn">ダミーテキストを詳しくみる&emsp;&emsp;&emsp;></div>
+                        <p>会社概要、IR情報などはこちらからご覧ください。</p>
+                        <div class="combtn btn">詳しくみる&emsp;&emsp;&emsp;></div>
                     
                 </div>
                 <div class="in-ri-wp">
                     <div class="infos inforight">
                         <h3>RECRUIT</h3>
-                        <p>ダミーテキスト</p>
+                        <p>採用</p>
                     </div>
-                        <p>ダミーテキストダミーテキストダミーテキス</p>
-                        <div class="recbtn btn">ダミーテキストを詳しくみる&emsp;&emsp;&emsp;></div>
+                        <p>採用情報の詳細はこちらをご覧ください。</p>
+                        <div class="recbtn btn">詳しくみる&emsp;&emsp;&emsp;></div>
                 </div>
             </div>
         </div>
@@ -173,7 +173,7 @@
         <div class="footer">
             <img class="fot-logo" src="logo-dummy.png">
             <div class="box-adress">
-                <h3>本社・MM工場</h3>
+                <h3>本社・MM支店</h3>
                 <p>〒123-5678</p>
 
                 <p>東京都小笠原諸島</p>
@@ -181,13 +181,13 @@
             </div>
 
             <div class="box-adress">
-                <h3>本社・MM工場</h3>
+                <h3>本社・MM支店</h3>
                 <p>〒123-567</p>
                 <p>東京都小笠原諸島</p>
                 <p>電話番号:12-3456-789</p>
             </div>
             <div class="box-adress">
-                <h3>本社・MM工場</h3>
+                <h3>本社・MM工支店</h3>
                 <p>〒123-567</p>
                 <p>東京都小笠原諸島</p>
                 <p>電話番号:12-3456-789</p>
