--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
         <div class="hero-image">
             <div class="hero-text">
-                <h2>あなたのやりたいを見つけてくる旅行会社ト</h2>
+                <h2>あなたのやりたいを見つけてくる旅行会社</h2>
                 <p>目的地さえ教えていただければ、さまざまなプランをご提案いたします。</p>
             </div>
         </div>
