--- a/index.html
+++ b/index.html
@@ -194,7 +194,7 @@
             </div>
         </div>
         
-            <nav>
+<!--             <nav>
                 <ul class="fot-list">
                     <li><a  href="#">HOME</a></li>
                     <li><a  href="#">事業内容</a></li>
@@ -203,7 +203,7 @@
                     <li><a  href="#">お知らせ</a></li>
                     <li><a href="#">採用情報</a></li>                 
                 </ul>
-            </nav>
+            </nav> -->
 
        
 
