--- a/index.html
+++ b/index.html
@@ -54,12 +54,12 @@
         </div>
 
         <div class="service">
-            <div class="service-text svwrap">
+<!--             <div class="service-text svwrap">
                 <h2>Dummy旅行</h2>
                 <h4>Dummy trip</h4>
                 <p>四季折々の観光エリアをオールシーズン楽しむためのさまざまなご提案</p>
 
-            </div>
+            </div> -->
             <div class="heikei">
                 <div class="service-wrapper svwrap">
                     <div class="service-row left">
