--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
-    <title>株式会社　ダミー旅行</title>
+    <title>株式会社　dammy旅行</title>
     <link rel="stylesheet" href="stylesheet.css" type="text/css" />
     <link rel="stylesheet" href="responsive.css" type="text/css" />
     <!-- フォントオーサム -->
