--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
   <body>
     <header class="wrapper">
-      <img src="logo-dummy.png" alt="ダミーテキスト" />
+      <img src="../img/logo-dummy.png" alt="ダミーテキスト" />
       <nav>
         <ul class="head-list">
           <li><a class="a-nav" href="#">HOME</a></li>
@@ -66,7 +66,7 @@
       <div class="heikei">
         <div class="service-wrapper svwrap">
           <div class="service-row left">
-            <img src="service_01.jpeg" />
+            <img src="../img/service_01.jpeg" />
             <div class="bottom-text">
               <p>service01</p>
               <h3>高原巡りの旅</h3>
@@ -75,7 +75,7 @@
             </div>
           </div>
           <div class="service-row center">
-            <img src="service_02.jpeg" />
+            <img src="../img/service_02.jpeg" />
             <div class="bottom-text">
               <p>service02</p>
               <h3>絶景の海巡り</h3>
@@ -84,7 +84,7 @@
             </div>
           </div>
           <div class="service-row right">
-            <img src="service_03.JPG" />
+            <img src="../img/service_03.JPG" />
             <div class="bottom-text">
               <p>service03</p>
               <h3>旬、食の旅</h3>
